# ExpenseGram

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
src/: __init__.py
src/core/: __init__.py  config.py  database.py  parser.py
src/telegram_bot/: __init__.py  bot.py  handlers.py  middleware.py
tests/: test_bot_handlers.py  test_config.py  test_database.py  test_parser.py
