[project]
name = "expensegram"
version = "0.2.0"
description = "A simple telegram bot for managing expenses"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py314"

[tool.pytest.ini_options]
pythonpath = ["."]

